mosquitto/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mqtt
  name: mqtt
  namespace: hass
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mqtt
    spec:
      containers:
      - image: eclipse-mosquitto:2.0.22
        name: mqtt
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 1883
            name: insecure
            protocol: TCP
          - containerPort: 8883
            name: secure
            protocol: TCP
          - containerPort: 9001
            name: ws
            protocol: TCP
        volumeMounts:
          - name: config-volume
            mountPath: /mosquitto/config
          - name: certs
            mountPath: /mosquitto/certs/
          - name: data-volume
            mountPath: /mosquitto/data
          - name: password-healthcheck
            mountPath: /healthcheck/healthcheck.sh
            subPath: healthcheck.sh
            readOnly: true
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - ./healthcheck/healthcheck.sh
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      securityContext:
        runAsNonRoot: true
        fsGroup: 1883
        runAsGroup: 1883
        runAsUser: 1833
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: mqtt
        - name: config-volume
          projected:
            sources:
              - configMap:
                  name: mosquitto-conf
              - secret:
                  name: mqtt
        - name: certs
          secret:
            secretName: tls-certificate
        - name: password-healthcheck
          secret:
            secretName: mqtt
            defaultMode: 383
