mosquitto/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hass
  labels:
    service: mqtt
    app.kubernetes.io/name: mqtt
  name: mqtt
spec:
  ports:
  - name:  insecure
    port: 1883
    targetPort:  1883
    protocol:  TCP
  - name:  secure
    port: 8883
    targetPort:  8883
    protocol:  TCP
  - name:  ws
    port: 9001
    targetPort:  9001
    protocol:  TCP
  selector:
    app.kubernetes.io/name: mqtt
  type: ClusterIP
